# HaSparql-Client

./: .gitignore  LICENSE  README  hasparql-client.cabal
Database/: HaSparqlClient.hs
Database/HaSparqlClient/: Queries.hs  Types.hs  Values.hs
Tests/: Tests.hs
